@@ -1,3 +1,8 @@
-Edit Configuation -> add VM Options -> --module-path "C:\Program Files\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
+Edit Configuation -> add VM Options -> --module-path
+"C:\Program Files\javafx-sdk-11.0.2\lib"
+--add-modules
+javafx.controls,javafx.fxml
+--add-exports
+javafx.base/com.sun.javafx.event=ALL-UNNAMED
 mac an lon:
 --module-path /Users/huy/Downloads/GitHub/CNPM/Libraris/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
